--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
         "php" : ">=7.2"
     },
     "autoload": {
-        "classmap": [
-            "src/Http/Middleware"
-        ],
+        "classmap": [],
         "psr-4": {
             "SoftlogicGT\\LaravelEpayServer\\": "src"
         }
