--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "php" : ">=7.2"
+        "php" : ">=7.2",
+        "laravel-validation-rules/credit-card" : "^1.7"
     },
     "autoload": {
         "classmap": [],
